# RTGP_unimi_project

./: 09_illumination_models.vert  10_illumination_models.frag  CMakeLists.txt  MakefileWin  MakefileWin.bat  README.md  basic.vert  bloom.frag  blur.frag  pause.frag  shader.frag  shader.vert  template_MakefileLinux  template_MakefileMac  tex.frag  work06b.cpp
backrooms_map/: original_backrooms.mtl
models/: newscene.mtl
util3d/: mesh.h  model.h
